creating shim game board

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 <script src="../bower_components/hexlib/dist/hex.min.js"></script>
 <script src="../bower_components/jquery/jquery.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="src/js/game.js"></script>
+<script src="js/game.js"></script>
 </body>
 </html>
 
