finishing first pass at implementation

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
 <script src="../bower_components/jquery/jquery.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="js/game.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
 
