--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset=utf-8 />
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>hexlib</title>
+<title>hexmines</title>
 <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/main.css" media="all" />
 </head>
