adding about menu with github link

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <a id="size" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
             Size <b class="caret"></b>
           </a>
-          <ul class="dropdown-menu" role="menu" aria-labelledby="size">
+          <ul class="dropdown-menu settings" role="menu" aria-labelledby="size">
             <li role="presentation">
               <a role="menuitem" tabindex="-1">
                 <label>
@@ -61,7 +61,7 @@
           <a id="difficulty" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
             Difficulty <b class="caret"></b>
           </a>
-          <ul class="dropdown-menu" role="menu" aria-labelledby="difficulty">
+          <ul class="dropdown-menu settings" role="menu" aria-labelledby="difficulty">
             <li role="presentation">
               <a role="menuitem" tabindex="-1">
                 <label>
@@ -93,6 +93,16 @@
                   <span>Terrifying</span>
                 </label>
               </a>
+            </li>
+          </ul>
+        </li><!--/.dropdown-->
+        <li class="dropdown">
+          <a id="about" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
+            About <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="about">
+            <li role="presentation">
+              <a role="menuitem" tabindex="-1" href="https://github.com/jimbojw/hexmines">hexmines on github</a>
             </li>
           </ul>
         </li><!--/.dropdown-->
