using symlinks for dependencies rather than long-winded bower_components paths

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8 />
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>hexmines</title>
-<link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" media="all" />
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/main.css" media="all" />
 </head>
 <body>
@@ -111,9 +111,9 @@
   </div>
 </div>
 <div class="minefield"></div>
-<script src="../bower_components/hexlib/dist/hex.min.js"></script>
-<script src="../bower_components/jquery/jquery.min.js"></script>
-<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="js/hex.min.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/game.js"></script>
 <script src="js/main.js"></script>
 </body>
