adding meta tags to support a more native mobile feel

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset=utf-8 />
+<meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>hexmines</title>
+<meta name="apple-mobile-web-app-title" content="hexmines"></meta>
+<meta name="apple-mobile-web-app-capable" content="yes"></meta>
+<meta name="apple-mobile-web-app-status-bar-style" content="black"></meta>
+<meta name="msapplication-TileColor" content="#000"></meta>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/main.css" media="all" />
 </head>
