adding minimal-ui to viewport to remove unnecessary browser bars

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="viewport" content="width=device-width, minimal-ui, initial-scale=1"/>
 <title>hexmines</title>
 <meta name="apple-mobile-web-app-title" content="hexmines"></meta>
 <meta name="apple-mobile-web-app-capable" content="yes"></meta>
